# mayapot

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
mayapot/: __main__.py
mayapot/maya/: change_soft_edge.py  get_object_list.py
tests/: test_mayapot.py
