[tool.poetry]
name = "mayapot"
version = "0.1.0"
description = "Library for operating frequently used flow of maya with CLI."
authors = ["InTack2 <takumi236@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
